--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </div>
     
     <div class="item">
-      <img src="taza2.jpg" alt="Taza 2">
-      <h2>Taza de Colores</h2>
+      <img src="calibracion.PNG" alt="calibraciones">
+      <h2>CAlibration ZTSur</h2>
       <p>Descripción de la taza de colores.</p>
       <p class="price">Precio: $12</p>
     </div>
